--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "roman-num",
-  "version": "0.0.1",
-  "description": "Roman Numeral to Number",
+  "name": "romanum",
+  "version": "1.0",
+  "description": "Roman Numeral Math!",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
